<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".registration.SignUpFragment">


    <EditText
        android:id="@+id/edEmailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edPasswordSignUp"
        app:layout_constraintEnd_toEndOf="@+id/edPasswordSignUp" />

    <EditText
        android:id="@+id/edPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="213dp"
        android:layout_marginBottom="214dp"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edPasswordSignUp"
        />

    <EditText
        android:id="@+id/edMobileSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/mobile"
        app:layout_constraintBottom_toTopOf="@+id/edPasswordSignUp"
        app:layout_constraintEnd_toEndOf="@+id/edEmailSignUp"
        app:layout_constraintStart_toStartOf="@+id/edEmailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/edEmailSignUp" />

    <TextView
        android:id="@+id/tvAllreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allreadyHaveAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/ppSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="69dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>